2007-4-23   fabian

    * Fixed a bug when launches multiple-line urls.
    * Fixed a bug with selection that scrolls out of the view.
    
2007-4-11   fabian
    
    * Fixed a bug that displays wrong actions when one edits existing key mappings.
    * Profile lists are now sorted
    * Key-mapping lists are now sorted.
    
2007-3-15   fabian

    * Changing font size when in full screen mode now changes row/col numbers correctly (#1671723).
    * Enhanced "Font size follow window size" behavior.
    
2007-3-13   fabian

    * Fixed a selection bug (#1677708).
    * Improved Fn key handling (#1676087).
    * Improved window cycling behavior (#1676009).
    
2007-2-20   fabian

    * iTerm no longer appends \n if a applescript writes a string ending with a space.
    * Fixed several localization problems.
    
2007-2-14	fabian

	* Fixed a bug that disables the background image setting.
	* Added an option to prompt for test-releases.
	
2007-2-12	fabian

	* Fixed a crash that happens when you toggle between the fullscreen and normal modes.
	* Fixed a "losing char space setting" bug (#1658074).
	* Adding @ as a valid URL character.
	* Enhanced numeric keypad behavior. Enter key on the keypad now works under application mode.

2007-2-10	fabian

	* Fixed a keypad mode problem. Cursor keys should behave better now.
	
2007-2-9	fabian

	* Fixed a bug that causes dead session be left open sometimes (#1653347).
	* Adjusted the full screen mode behavior, so you are less likely to be stuck.
	* Added selectedTextColor into Applescript.
	
2007-2-1	fabian

	* Added a default keyboard profile: xterm(OS X).
	* Fixed a Panther compatibility bug.
	* 0.9.5 release
	
2007-1-30	fabian

	* Fixed loss of settings bug due to full screen mode switchings.
	* Fixed a bug that causes the text under cursor rendered in wrong font.
	* Fixed window level for the preference panel under full screen mode transitions.
	
2007-1-29	fabian
